# simple_inference_server

./: .env.example  .gitignore  Dockerfile.cpu  Dockerfile.cuda  README.md  docker-compose.yml  env.example  models.yaml  pyproject.toml
app/: __init__.py  api.py  batching.py  chat_batching.py  config.py  dependencies.py  embedding_cache.py  main.py  model_config.py  state.py  threadpool.py  warmup.py
app/concurrency/: audio_limiter.py  limiter.py
app/middleware/: __init__.py  request_id.py
app/models/: base.py  bge_m3.py  embedding_gemma.py  generation_utils.py  hf_embedding.py  qwen_vl.py  registry.py  rerank.py  text_chat.py  whisper.py  whisper_worker.py
app/monitoring/: metrics.py
app/routes/: audio.py  chat.py  common.py  embeddings.py  rerank.py
app/utils/: executor_context.py  uploads.py
configs/: model_config.yaml
docs/: api-reference.md  code_review.md  configuration.md  continuous_batching.md  models.md  perf_testing.md  upstream_proxy.md
lb/: nginx.conf
scripts/: benchmark_audio.py  benchmark_chat.py  benchmark_embeddings.py  download_models.py  manual_smoke.py  run_dev.py
sdks/ruby/: Gemfile  README.md  simple_inference.gemspec
sdks/ruby/lib/: simple_inference.rb
sdks/ruby/lib/simple_inference/: client.rb  config.rb  errors.rb  http_adapter.rb  version.rb
sdks/ruby/lib/simple_inference/http_adapter/: httpx.rb
sdks/ruby/sig/: simple_inference.rbs
sdks/ruby/spec/: client_spec.rb  spec_helper.rb
sdks/ruby/test/: test_simple_inference_client.rb
tests/: conftest.py  test_audio_api.py  test_cancellation.py  test_chat_api.py  test_chat_batching.py  test_chat_oom.py  test_chat_prompt_bucketing.py  test_concurrency.py  test_daemon_threadpool.py  test_embedding_batching.py  test_embedding_cache.py  test_embeddings_api.py  test_executor_context.py  test_hf_embedding_qwen3.py  test_model_loading.py  test_model_parallelism.py  test_qwen_vl_utils.py  test_remote_image.py  test_rerank_api.py  test_startup_env.py  test_warmup_audio.py  test_warmup_fail_fast.py  test_whisper_lock.py
